--- a/base-app/package.json
+++ b/base-app/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "live-server dist/base-app",
-    "build": "npm run build:base-app && npm run build:clients",
+    "build": "npm run build:base-app",
     "build:clients": "npm run build:app-login && npm run build:app-people",
     "build:app-people": "ng build --prod --project app-people --output-hashing none --vendor-chunk false --output-path dist/base-app/app-people",
     "build:app-login": "ng build --prod --project app-login --output-hashing none --vendor-chunk false --output-path dist/base-app/app-login",
@@ -21,9 +21,12 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "~9.1.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "bootstrap": "^4.4.0",
     "live-server": "^1.2.1",
     "ngx-build-plus": "^9.0.6",
     "rxjs": "~6.5.4",
