--- a/base-app/package.json
+++ b/base-app/package.json
@@ -3,13 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "live-server dist/base-app",
-    "build": "npm run build:base-app",
-    "build:clients": "npm run build:app-login && npm run build:app-people",
-    "build:app-people": "ng build --prod --project app-people --output-hashing none --vendor-chunk false --output-path dist/base-app/app-people",
-    "build:app-login": "ng build --prod --project app-login --output-hashing none --vendor-chunk false --output-path dist/base-app/app-login",
+    "start": "ng serve",
+    "start:prod": "live-server dist/base-app",
+    "build": "npm run build:prod",
     "build:base-app": "ng build --project base-app",
-    "build:clients:webpack:old-solution": "webpack",
+    "build:prod" : "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
